[project]
name = "hypixeltwitchbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twitchio==2.10.0",
    "aiohttp",
    "python-dotenv",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can `import twitch`, `utils`, etc.
pythonpath = ["."]
testpaths = ["tests"]
