[project]
name = "hypixeltwitchbot"
version = "1.0.0"
description = "Twitch chat bot for Hypixel SkyBlock stats"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twitchio==2.10.0",
    "aiohttp==3.13.5",
    "python-dotenv==1.2.1",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.20",
    "pyrefly==0.36.2",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyrefly]
project-includes = ["bot", "tests"]
